# code-scraper

./: Cargo.toml  LICENSE  README.md  data.txt  output.txt
.github/workflows/: publish.yml
src/: main.rs
